ِk8s-argo/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-svc
spec:
  type: NodePort
  selector:
    app: petclinic      
  ports:
    - name: http          # ← أضف الاسم ده هنا
      port: 80
      targetPort: 8080
      nodePort: 30080
